# substratekitties

./: .editorconfig  .gitignore  Cargo.toml  README.md  design.md
front-end/: package.json
front-end/src/: App.js  KittyContext.js  KittyHooks.js  KittyInteractor.js  KittyInteractorStyleWrap.js  KittyPalletConditionWrap.js  KittyPower.js  Substratekitties.js  theme.js
front-end/src/config/: common.json
front-end/src/kitty-avatar/: index.jsx
front-end/src/substrate-lib/components/: TxButton.js
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs  mock.rs  nft.rs  tests.rs
pallets/substratekitties/: Cargo.toml
pallets/substratekitties/src/: lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
