[[bin]]
name = 'substratekitties-node'

[package]
authors = ['Dan Forbes <dan@parity.io>']
build = 'build.rs'
description = 'An update to https://github.com/shawntabrizi/substratekitties.'
edition = '2018'
homepage = 'https://github.com/danforbes/substratekitties'
license = 'Unlicense'
name = 'substratekitties-node'
repository = 'https://github.com/danforbes/substratekitties'
version = '2.0.0-rc'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
substratekitties-runtime = { path = '../runtime', version = '2.0.0-rc' }

# Substrate dependencies
sc-basic-authorship = '0.8.0'
sc-cli = { features = ['wasmtime'], version = '0.8.0' }
sc-client-api = '2.0.0'
sc-consensus = '0.8.0'
sc-consensus-aura = '0.8.0'
sc-executor = { features = ['wasmtime'], version = '0.8.0' }
sc-finality-grandpa = '0.8.0'
sc-network = '0.8.0'
sc-service = { features = ['wasmtime'], version = '0.8.0' }
sc-transaction-pool = '2.0.0'
sp-consensus = '0.8.0'
sp-consensus-aura = '0.8.0'
sp-core = '2.0.0'
sp-finality-grandpa = '2.0.0'
sp-inherents = '2.0.0'
sp-runtime = '2.0.0'
sp-transaction-pool = '2.0.0'

[build-dependencies]
substrate-build-script-utils = '2.0.0'
