[package]
authors = ['Dan Forbes <dan@parity.io>']
edition = '2018'
homepage = 'https://github.com/danforbes/substratekitties'
license = 'Unlicense'
name = 'substratekitties-runtime'
repository = 'https://github.com/danforbes/substratekitties'
version = '2.0.0-rc'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.3.5' }
frame-executive = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
pallet-aura = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-commodities = { default-features = false, version = '1.0.0' }
pallet-grandpa = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
pallet-substratekitties = { default-features = false, path = '../pallets/substratekitties', version = '2.0.0-rc' }
pallet-sudo = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
pallet-transaction-payment = { default-features = false, version = '2.0.0' }
serde = { features = ['derive'], optional = true, version = '1.0.116' }
sp-api = { default-features = false, version = '2.0.0' }
sp-block-builder = { default-features = false, version = '2.0.0' }
sp-consensus-aura = { default-features = false, version = '0.8.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-inherents = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-offchain = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-session = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-transaction-pool = { default-features = false, version = '2.0.0' }
sp-version = { default-features = false, version = '2.0.0' }

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '1.0.5' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-commodities/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
