[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'
[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[package]
authors = ['Dan Forbes <dan@parity.io>']
description = 'An update to https://github.com/shawntabrizi/substratekitties.'
edition = '2018'
homepage = 'https://github.com/danforbes/substrate-node-template/tree/nft'
license = 'Unlicense'
name = 'nft'
repository = 'https://github.com/danforbes/substrate-node-template/tree/nft'
version = '2.0.0-rc3'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
