[package]
authors = ['Dan Forbes <dan@parity.io>']
description = 'An update to https://github.com/shawntabrizi/substratekitties.'
edition = '2018'
homepage = 'https://github.com/danforbes/substratekitties'
license = 'Unlicense'
name = 'pallet-substratekitties'
repository = 'https://github.com/danforbes/substratekitties'
version = '2.0.0-rc'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.3.5' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
pallet-commodities = { default-features = false, version = '1.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-commodities/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
]
